# file-watcher

./: Blog.md  Cargo.toml  README.md
src/: main.rs
