[package]
name = "file-watcher"
version = "0.1.0"
edition = "2024"
authors = ["Rene Krewinkel <rene@krewinkel.nl>"]
repository = "https://github.com/e21-ai/lib-ledger"
homepage = "https://krewinkel.studio"
description = "Watching files for changes and executing cli commands as specified"


[dependencies]
notify = "6"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
which = "6"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
shell-words = "1"
globset = "0.4"
text-to-ascii-art = "0.1.5"
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
